fix title overflow on low res screens

--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -236,6 +236,7 @@ a{
 @media (max-width : 1000px) {
   .blog-card {
     width: 98%;
+    min-height: 300px;
   }
 }
 
